tests/expectations/compiler/examples/core.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:8:24
     |
   8 |         let b: field = BHP256::hash_to_field(a);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:9:24
     |
   9 |         let c: field = Poseidon2::hash_to_field(b);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
